Bug 345500 - Slider positions are almost invisible
Summary: Slider positions are almost invisible
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 2.9.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-25 06:25 UTC by kde-doozer
Modified: 2015-04-11 16:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (11.88 KB, image/png)
2015-03-25 06:27 UTC, kde-doozer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kde-doozer 2015-03-25 06:25:43 UTC
On a light theme sliders are slightly visible, on a dark theme they almost vanish. Windows 7 x64, Krita 2.9.1 x64.
http://i.imgur.com/Cgnu8PW.png

Reproducible: Always

Steps to Reproduce:
1. Start Krita.
2. Open the docker 'Specific color selector'
3. Look at the RGB sliders in the docker
Comment 1 kde-doozer 2015-03-25 06:27:38 UTC
Created attachment 91727 [details]
screenshot
Comment 2 Moritz Molch 2015-04-11 16:46:49 UTC
Git commit 82ca388c64670e65de7c2ec5e40d6c34cf90cd08 by Moritz Molch.
Committed on 11/04/2015 at 16:46.
Pushed by mmolch into branch 'calligra/2.9'.

Fix barely visible arrow in some themes

M  +41   -0    libs/widgets/KoColorSlider.cpp
M  +1    -0    libs/widgets/KoColorSlider.h

http://commits.kde.org/calligra/82ca388c64670e65de7c2ec5e40d6c34cf90cd08