Fix barely visible arrow in some themes

BUG:345500